fixed all alignment issue

--- a/css/fileupload.css
+++ b/css/fileupload.css
@@ -172,7 +172,6 @@ textarea {
     .text{
         text-align: center;
         padding: 0;
-        margin-left: 2em;
     }
 }
 
